--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #50C878;
+    background-color: black;
     font-family: logo;
 }
 
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 100vh;
     z-index: 200;
-    background-color: #50C878;
+    background-color: black;
 }
 
 .center {
@@ -40,7 +40,7 @@ body {
 }
 
 .fade-in {
-    opacity: 0;
+    opacity: 1;
     animation: fadeIn 1.5s ease-in forwards;
 }
 
