--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: #0f0e12;
     font-family: logo;
 }
 
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 100vh;
     z-index: 200;
-    background-color: black;
+    background-color: #0f0e12;
 }
 
 .center {
