--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
     font-family: logo;
 }
 
-.splashContainer {
+.splash-container {
     position: fixed;
     width: 100%;
     height: 100vh;
-    z-index: 200;
+    z-index: 1;
     background-color: #0f0e12;
 }
 
@@ -27,8 +27,8 @@ body {
     height: 100vh;
 }
 
-.display-none {
-    z-index: -10;
+.splash-disappear {
+    z-index: -1;
     opacity: 0;
     transition: all 0.5s;
 }
@@ -43,6 +43,5 @@ body {
     opacity: 1;
     animation: fadeIn 1.5s ease-in forwards;
 }
-
 
 /* main content */
