--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     font-family: logo;
     src: url(fonts/otf/MontserratAlt1-Medium.otf);
 }
-  
-/* splash screen */
+
+/* general */
 
 body {
     margin: 0;
@@ -12,19 +12,33 @@ body {
     font-family: logo;
 }
 
-.splash-container {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    z-index: 1;
-    background-color: #0f0e12;
+a {
+    color: white;
 }
 
 .center {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.full-height {
     height: 100vh;
+}
+
+.white-font {
+    font-family: logo;
+    color: white;
+}
+  
+/* splash screen */
+
+.splash-container {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    background-color: #0f0e12;
 }
 
 .splash-disappear {
@@ -45,3 +59,40 @@ body {
 }
 
 /* main content */
+
+/* footer */
+
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+}
+
+/* impressum */
+
+.impressum {
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    height: 96vh;
+    width: 98vw;
+}
+
+.information {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.header {
+    font-size: 24;
+}
+
+.text {
+    font-size: 12;
+}
+
+.impressum p {
+    margin: 10px;
+}
