--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@
 }
 
 @font-face {
-    font-family: logo-normal;
+    font-family: font-normal;
     src: url(fonts/montserrat/static/Montserrat-Regular.ttf);
+}
+
+@font-face {
+    font-family: font-bold;
+    src: url(fonts/montserrat/static/Montserrat-Bold.ttf);
 }
 
 /* general */
@@ -36,7 +41,12 @@ a {
 }
 
 .white-normal-font {
-    font-family: logo-normal;
+    font-family: font-normal;
+    color: white;
+}
+
+.white-bold-font {
+    font-family: font-bold;
     color: white;
 }
   
@@ -69,14 +79,47 @@ a {
 
 /* main content */
 
+#main-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+/* header */
+
+#header {
+    flex: 1;
+}
+
+#header-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#content {
+    flex:10;
+    width: 100%;
+    background-color: wheat;
+}
+
 /* footer */
 
 #footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 5%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+#footer a {
+    text-align: center;
+    font-size: 14;
+}
+
 
 /* impressum */
 
@@ -95,7 +138,7 @@ a {
 }
 
 .header {
-    font-size: 24;
+    font-size: 14;
 }
 
 .text {
