--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ a {
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #content {
