--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 10;
+    flex: 1;
     text-align: center;
     overflow: auto;
     padding-left: 10px;
@@ -125,22 +125,26 @@ a {
     border-radius: 25px;
 }
 
-/* header */
-
 #header {
-    flex: 1;
-}
-
-#header-logo {
+    height: 60px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* footer */
+#header-logo {
+    object-fit: contain;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    max-width: calc(100% - 20px);
+    max-height: calc(100% - 20px);
+}
 
 #footer {
-    flex: 1;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,38 +152,5 @@ a {
 
 #footer a {
     text-align: center;
-    font-size: 14;
-}
-
-
-/* impressum */
-
-.impressum {
-    margin: 10px;
-    width: calc(100% - 20px);
-    height: (calc 100vfh - 20px);
-}
-
-.impressum-header {
-    font-size: 16;
-    margin-bottom: 20px;
-    margin-left: 10px;
-}
-
-.information {
-    margin-left: 5px;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.information-header {
-    font-size: 12;
-}
-
-.text {
     font-size: 10;
-}
-
-.impressum p {
-    margin: 5px;
 }
