--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ a {
     animation: pulse 2s infinite;
 }
 
+.splash-image {
+    max-width: 90%;
+    max-height: 100%;
+}
+
 /* main content */
 
 #main-content {
@@ -137,8 +142,8 @@ a {
     object-fit: contain;
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     max-width: calc(100% - 20px);
     max-height: calc(100% - 20px);
 }
