--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ a {
 
 .main-image {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 700px; /* for desktop. looks weird in full screen*/
     object-fit: scale-down;
     border-radius: 25px;
 }
